# FVM1D

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/fvm1d/: __init__.py
src/fvm1d/grid/: __init__.py  testsample.py
src/fvm1d/io/: __init__.py
src/fvm1d/solver/: __init__.py
src/fvm1d/system/: __init__.py
src/fvm1d/variable/: __init__.py  testsample.py
tests/: test_grid.py  test_smoke.py
